--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,30 @@
     <script src="alpineJS.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+<style>
+    .total-bill{
+        background-color: #d3d3d3;
+        padding: 1em;
+        border: 1px solid #d3d3d3;
+        margin-bottom: 2em;
+        border-radius: 1.3em;
+    }
+    .price-plan {
+        background-color: #d3d3d3; 
+        padding: 1em;  
+        border: 1px solid #d3d3d3;
+        border-radius: 1.3em;
+
+    }
+    /* totalPhoneBill {
+        background-color:  #afeeee;
+    } */
+</style>
 <body>
-    <div class="mt-4 mx-auto p-4 border border-dark-subtle rounded" style="max-width: 600px;" x-data="phoneBillApp" x-init="fetchPricePlans">
+    <div class=" bg-blue mt-4 mx-auto p-4 border border-dark-subtle rounded" style="max-width: 700px;" x-data="phoneBillApp" x-init="fetchPricePlans">
         <!-- Dropdown to Select a Price Plan -->
+         <div class="total-bill">
+            <h2 class="text-center">Total PhoneBill Calculator</h2>
         <div class="mt-2 grid gap-0 row-gap-3">
             <label class="mb-2" for="price-plan">Select a Price Plan:</label>
             <select class="form-select" id="price-plan" x-model="selectedPlan">
@@ -36,13 +57,13 @@
         <div class="text-center" x-show="total !== null">
             <h3>Total Bill: R<span x-text="total"></span></h3>
         </div>
-
+</div>
         <!-- Display List of Price Plans and their Totals -->
-        <div>
+        <div class="price-plan">
             <h3 class="my-4">Price Plans:</h3>
             <div class="d-flex flex-column gap-3">
                 <template x-for="plan in pricePlans" :key="plan.id">
-                    <div class=" d-flex align-items-center border p-3 m-2">
+                    <div class=" d-flex align-items-center border p-3 m-2 bg-white">
                         <strong x-text="plan.plan_name"></strong> - 
                         Call Cost: R<span x-text="plan.call_price"></span>, 
                         SMS Cost: R<span x-text="plan.sms_price"></span>
@@ -57,7 +78,7 @@
 
         <!-- Create New Price Plan Button -->
          <div class="text-center mt-4">
-        <button type="button" class="btn btn-success mt-4"  @click="openCreatePlanModal()">
+        <button type="button" class="btn btn-outline-secondary mt-4"  @click="openCreatePlanModal()">
             NEW Price Plan
         </button>
 </div>
